@@ -1,3 +1,9 @@
+2006-06-15  Roland McGrath  <roland@redhat.com>
+
+	* libelf.h (elf_getarsym): Fix comment typo.
+	Rename second parameter to be more explanatory.
+	(elf_getident, elf_rawhide): Likewise.
+
 2006-05-28  Ulrich Drepper  <drepper@redhat.com>
 
 	* elf32_updatefile.c (updatemmap): Preserve section content if
